# Time-series-forecast-of-energy-consumption-in-Tetouan-City

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/: README.md  enriched_zone1_power_consumption_of_tetouan_city.csv  zone1_power_consumption_of_tetouan_city.csv
models/: tft_model_state_dict.pt
notebooks/: 00_EDA.ipynb  01_ARIMA_SARIMA_modeling.ipynb  02_assembly_model_modeling.ipynb  03_MLP_modeling.ipynb  04_RNN_modeling.ipynb  05_LSTM_modeling.ipynb  06_convolutional_modeling.ipynb  07_anomaly_detection.ipynb  08_TFT.ipynb  08_TFT_preprocessing.ipynb  09_TFT.ipynb
src/: README.md  app.py  main.py  streamlit_app_tft.py
src/core/: data_manager.py  model_manager.py
src/utils/: helper.py
