[project]
name = "TFT_Streamlit_Docker_Project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pytorch-forecasting>=1.4.0",
    "pytorch-lightning>=2.5.5",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
]
